--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "suntekcorps/hyperf-mongodb",
+    "name": "suntekcorps/hyperf-mongodb-beta-0.1",
     "description": "suntekcorps",
     "authors": [
         {
@@ -11,7 +11,7 @@
 		"php": ">=7.2",
 		"psr/container": "^1.0",
 		"hyperf/pool": "^2.0",
-		"hyperf/utils": "~2.0.0"
+		"hyperf/utils": "~2.1.0"
 	},
 	"autoload": {
     "classmap": [
