--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "suntekcorps/hyperf-mongodb-beta-0.1",
+    "name": "suntekcorps-beta/hyperf-mongodb",
     "description": "suntekcorps",
     "authors": [
         {
